<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">安全中心</string>
    <string name="one_key_check">一键体检</string>
    <string name="one_key_check_never">您的系统从未进行体检,建议立即体检</string>
    <string name="one_key_check_has">上次体检时间 %1$s</string>

    <!-- 常用的 -->
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>

    <!-- 子模块名称 -->
    <string name="module_optimizer">系统加速</string>
    <string name="module_net">流量监控</string>
    <string name="module_block">骚扰拦截</string>
    <string name="module_save">省电优化</string>
    <string name="module_antivirse">病毒扫描</string>
    <string name="module_mac">权限管理</string>

    <string name="action_settings">Settings</string>
	<string name="netstat">流量</string>
	<string name="isRoot">检查是否root</string>
	<string name="clear">清理</string>
	<string name="kill">杀死</string>

	<string name="check_rooted">设备已root</string>
	<string name="check_unroot">设备未root</string>


	<!-- 系统优化 -->
	<string name="opt_garbage">垃圾清理</string>
	<string name="opt_task">任务清理</string>
	<string name="opt_self_on">自启动应用</string>
	<string name="opt_set">优化设置</string>

	<string name="app_cache">应用缓存</string>
	<string name="sdcard_cache">垃圾缓存</string>
	<string name="kill_app">进程清理</string>
    <string name="kill_app_des">可清理进程</string>
	<string name="app_cache_summary">发现 %1$s 应用缓存</string>
	<string name="sdcard_cache_summary">发现 %1$s 垃圾缓存</string>
    <string name="selfon_app_summary">发现 %1$s 自启动应用</string>
	<string name="kill_app_summary">可清理进程 %1$s 个</string>
	<string name="kill_app_ok">清理此进程</string>
	<string name="kill_app_no">加到白名单</string>
    <string name="already_in_white">已在白名单</string>
	<string name="kill_dialog_summary">占用内存： %1$s</string>
    <string name="op_success">操作成功</string>
    <string name="op_fail">操作失败</string>

	<string name="start_scan">开始扫描</string>
	<string name="clear_all">一键优化</string>
	<string name="need_no_clear">无需清理</string>
	<string name="scanning">正在扫描 : </string>
	<string name="scan_complete">扫描完成</string>
	<string name="find_no_cache">没有发现系统缓存</string>
	<string name="clear_ok">清理完成</string>
    <string name="clear_just_now">刚刚优化过系统</string>
    <string name="clear_sevel_hour">%1$s 个小时前优化过</string>
    <string name="clear_sevel_day">您已经%1$s天没优化过了</string>
    <string name="clear_sevel_week">您已经%1$s周没优化过了</string>
    <string name="clear_sevel_month">您已经%1$s个月没优化过了</string>
    <string name="clear_never">您从未优化过系统</string>

    <string name="allowed">已允许</string>
    <string name="forbidden">已禁止</string>


	<!-- 流量统计 -->
    <string name="data_sum">总套餐量</string>
    <string name="data_used">已使用量</string>
    <string name="data_sum1">500MB</string><!-- temp -->
    <string name="data_used1">200MB</string><!-- temp -->
    <string name="net_firewall_summary">防止应用后台使用流量</string>
    <string name="data_usage_day">今日流量</string>
    <string name="data_usage_month">当月流量</string>
    <string name="data_usage_set">套餐设置</string>
    <string name="data_usage_mac">网络控制</string>
    <string name="data_stat">流量统计</string>
    <string name="data_rank">使用排行</string>
	<string name="process_kernel_label">android系统</string>
	<string name="data_usage_uninstalled_apps_users">已删除的应用和用户</string>
	<string name="data_usage_uninstalled_apps">已删除的应用</string>
	<string name="running_process_item_user_label" >用户： %1$s</string>
	<string name="data_usage_app_restricted">受限</string>
	<string-array name="data_usage_cycles">
        <item>本月流量统计</item>
        <item>当日流量统计</item>
    </string-array>
	<string-array name="data_type">
        <item>WIFI网络</item>
        <item>数据网络</item>
    </string-array>
    <string name="number_set">设置手机号码</string>
    <string name="number_change">修改手机号码</string>
    <string name="number_error">设置失败,号码输入有误</string>
    <string name="input_phone_number">请输入您的手机号码</string>
    <string name="not_set_data_all">流量套餐未设置</string>
    <string name="seted_data_all">流量套餐未设置</string>
    <string name="data_usage_above_all">流量使用已超过套餐值</string>


	<!-- app ops -->
    <string name="ops_app_list">应用列表</string>
    <string name="ops_ops_list">权限列表</string>
    <string name="app_detail">应用所申请的权限列表</string>
    <string name="ops_detail">申请本权限的应用列表</string>
    <string name="app_has_ops">  项权限</string>
    <string name="ops_use_count"> 个应用申请该权限</string>
	<string name="app_ops_running">"正在运行"</string>
	<string name="app_ops_never_used">"（从未使用）"</string>
	<string name="version_text">"版本 <xliff:g id="VERSION_NUM">%1$s</xliff:g>"</string>


    <!-- scan virus-->
    <string name="scan_log_text_title">10-29 12:43 病毒扫描</string>
    <string name="scan_log_result_title">扫描文件：100 </string>

    <string name="scan_button_text">scan it</string>
    <string name="clear_button_text">clear it</string>
    <string name="update_button_text">update</string>
    <string name="log_button_text">log</string>
    <string name="scan_interrupt">Scan Interrupt</string>
    <string name="tobecontinued">To be Continued</string>
    <string name="usedtime">used time : 55 second</string>
    <string name="veryhealth">very health</string>
    <string name="clearover">Clear Over</string>
    <string name="pause">暂停</string>
    <string name="scan_virus_title">病毒扫描</string>
    <string name="problem">problem</string>
    <string name="sms_block_cancel">cancel</string>
    <string name="sms_block_clear">clear</string>

    <string name="sms_block_settings">短信拦截设置</string>
    <string name="smart_block">智能拦截</string>

    <string name="tele_block_settings">电话拦截设置</string>

	<!-- 节电模块 -->
	<string name="battery_defined_plan_mode">自定义模式</string>
	<string name="battery_default_plan_mode">省电模式</string>
	<string name="battery_plan_mode_edit">请输入模式名称</string>
	<string name="air_plan_mode">飞行模式</string>
	<string name="mobile_data">移动数据</string>
	<string name="wifi">WIFI</string>
	<string name="bluetooth">蓝牙</string>
	<string name="locked_screen_timeout">灭屏时间</string>
	<string name="brightness">屏幕亮度</string>
	<string name="ringer">铃声</string>
	<string name="vibrate">振动</string>
	<string name="battery_status_discharge_summary">电池可用时间</string>
	<string name="battery_status_charge_summary">电池充电时间</string>
	<string name="battery_hour">时</string>
	<string name="battery_minute">分</string>
	<string name="in_airplane_mode">正处于飞行模式下</string>
	<string name="add_battery_mode">添加</string>
	<string name="battery_charging_status_txt">电池充电时间</string>
	<string name="battery_discharge_status_txt">电池充电时间</string>
	<string name="hour_txt">时</string>
	<string name="minute_txt">分</string>
	
	<!-- one-key-check other -->
	<string name="adb_check_name">USB调试检查</string>
	<string name="adb_check_pass">USB调试检查通过</string>
	<string name="adb_check_warning">发现USB调试打开</string>
	<string name="default_sms_check_name">默认短信应用检查</string>
	<string name="default_sms_check_pass">默认短信应用检查通过</string>
	<string name="default_sms_check_warning">默认短信应用不是可信任来源</string>
	<string name="device_manager_check_name">设备管理器使用检查</string>
	<string name="device_manager_check_pass">设备管理器检查使用通过</string>
	<string name="device_manager_check_warning">检查到非系统应用使用设备管理器</string>
	<string name="non_market_check_name">安装未知应用来源开关检测</string>
	<string name="non_market_check_pass">安装未知应用来源开关检测通过</string>
	<string name="non_market_check_warning">发现安装未知来源应用开关打开</string>
	

    <string name="one_key_check_text">一键体检</string>
    <string name="one_key_check_test_string">you have</string>

</resources>













