<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">

        <ImageView
            android:id="@+id/title_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/one_key_check_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/one_key_check_never" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/arc">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:columnCount="3">

            <Button
                android:id="@+id/module_antivirse"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/virus_scan"
                android:gravity="bottom|center"
                android:text="@string/module_antivirse" />

            <Button
                android:id="@+id/module_optimizer"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/sys_opt"
                android:gravity="bottom|center"
                android:text="@string/module_optimizer" />

            <Button
                android:id="@+id/module_block"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/block"
                android:gravity="bottom|center"
                android:text="@string/module_block" />

            <Button
                android:id="@+id/module_net"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/net"
                android:gravity="bottom|center"
                android:text="@string/module_net" />

            <Button
                android:id="@+id/module_save"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/power"
                android:gravity="bottom|center"
                android:text="@string/module_save" />

            <Button
                android:id="@+id/module_mac"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/permission"
                android:gravity="bottom|center"
                android:text="@string/module_mac" />
        </GridLayout>
    </RelativeLayout>
</FrameLayout>
