<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/power_manager_above_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/power_manager_red_bg" >

        <ImageView
            android:id="@+id/battery_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/power_battery_discharge" />

        <TextView
            android:id="@+id/battery_status_time_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/battery_logo"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:text="@string/battery_status_discharge_summary"
            android:textColor="@color/batteryinfo_color" />

        <LinearLayout
            android:id="@+id/battery_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/battery_status_time_summary"
            android:layout_alignLeft="@id/battery_logo"
            android:layout_alignRight="@id/battery_logo"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/battery_time_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:textColor="@color/batteryinfo_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/battery_time_hour_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/battery_hour"
                android:textColor="@color/batteryinfo_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/battery_time_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/batteryinfo_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/battery_time_minute_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/battery_minute"
                android:textColor="@color/batteryinfo_color"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/battery_plan_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none" />

</LinearLayout>